Gebruik van logo en naam PaQu

--- a/pqserve/static/info.html
+++ b/pqserve/static/info.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta name="robots" content="noindex,nofollow">
-    <title>Woordrelaties -- Help</title>
+    <title>PaQu -- Help</title>
     <META http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" type="text/css" href="wordrel.css">
+    <link rel="stylesheet" type="text/css" href="paqu.css">
     <base target="_blank">
   </head>
   <body>
-    <h1>Woordrelaties</h1>
+    <img src="paqu.png" class="logo"><br>
 
 Inhoud:
 <ul>
