--- a/pqserve/static/rename.html
+++ b/pqserve/static/rename.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>Corpus hernoemen</title>
+    <title>PaQu -- Corpus hernoemen</title>
     <meta name="robots" content="noindex,nofollow">
-    <link rel="stylesheet" type="text/css" href="wordrel.css">
+    <link rel="stylesheet" type="text/css" href="paqu.css">
   </head>
   <body>
     <h1>Corpus hernoemen</h1>
