--- a/pqserve/static/share.html
+++ b/pqserve/static/share.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>Corpus delen</title>
+    <title>PaQu -- Corpus delen</title>
     <meta name="robots" content="noindex,nofollow">
-    <link rel="stylesheet" type="text/css" href="wordrel.css">
+    <link rel="stylesheet" type="text/css" href="paqu.css">
   </head>
   <body>
     <h1>Corpus delen</h1>
