--- a/pqserve/static/info.html
+++ b/pqserve/static/info.html
@@ -30,14 +30,14 @@ toegevoegd door de automatische parser Alpino.
 In de toepassing kun je zoeken naar woord-paren en hun syntactische
 relatie (zoals onderwerp, lijdend voorwerp, bepaling). In welke zinnen
 komt
-<a href="/?word=auto&amp;rel=obj1&amp;hword=stelen">het
+<a href="/?db=_default&amp;word=auto&amp;rel=obj1&amp;hword=stelen">het
 	  woord <em>auto</em> voor als lijdend voorwerp van het
 	  werkwoord <em>stelen</em></a>?
 In welke zinnen komen
-<a href="/?word=beschuit&amp;rel=cnj%2Fcnj&amp;hword=appel">de woorden <em>beschuit</em> en <em>appel</em> voor
+<a href="/?db=_default&amp;word=beschuit&amp;rel=cnj%2Fcnj&amp;hword=appel">de woorden <em>beschuit</em> en <em>appel</em> voor
 als conjuncten in een coordinatie</a>?
 In welke zinnen komt
-<a href="/?word=geen&amp;rel=det&amp;hword=toekomst&amp;postag=&amp;hpostag=">het woord <em>geen</em>
+<a href="/?db=_default&amp;word=geen&amp;rel=det&amp;hword=toekomst&amp;postag=&amp;hpostag=">het woord <em>geen</em>
 voor als determiner bij het woord <em>toekomst</em></a>?
 <p>
 Voor elke zoekvraag kun je dus twee woorden specificeren, en eventueel
@@ -46,13 +46,13 @@ woordsoort (werkwoord, bijvoeglijk naamwoord, zelfstandig naamwoord)
 nader beperken. Omdat je elk van de vijf velden ook oningevuld kunt
 laten, kun je ook vragen als de volgende formuleren: In welke zinnen
 komt
-<a href="/?rel=obj1&amp;hword=stelen">een lijdend
+<a href="/?db=_default&amp;rel=obj1&amp;hword=stelen">een lijdend
 	    voorwerp bij het werkwoord <em>stelen</em></a> voor?
 In welke
 zinnen komt
-<a href="/?word=&amp;rel=su&amp;hword=beslissen&amp;postag=&amp;hpostag=">een onderwerp bij het werkwoord <em>beslissen</em></a> voor?
+<a href="/?db=_default&amp;word=&amp;rel=su&amp;hword=beslissen&amp;postag=&amp;hpostag=">een onderwerp bij het werkwoord <em>beslissen</em></a> voor?
 In welke zinnen komt
-<a href="/?postag=bw&amp;rel=mod&amp;hpostag=ww">een bijwoord voor als bepaling bij een werkwoord</a>?
+<a href="/?db=_default&amp;postag=bw&amp;rel=mod&amp;hpostag=ww">een bijwoord voor als bepaling bij een werkwoord</a>?
 <p>
 Op de bladzijde met de gevonden zinnen kun je per zin de preciese
 syntactische structuur bekijken door op de <em>boom</em>-link te klikken. Je
@@ -353,36 +353,36 @@ Ik <span class="hfd">wil</span> hem niet langer de hand boven het hoofd <span cl
     Zoek naar het woord <em>fiets</em>, inclusief vervoegingen en
     varianten in collocatie (hoofdletters/kleine letters, met/zonder accenten):
     <div class="example">
-     <span class="wrd">woord</span>: <a href="/?word=fiets">fiets</a>
+     <span class="wrd">woord</span>: <a href="/?db=_default&amp;word=fiets">fiets</a>
     </div>
     Zoek naar het woord <em>FiÉtŠ</em>, inclusief varianten in
     collocatie (hoofdletters/kleine letters, met/zonder accenten):
     <div class="example">
-      <span class="wrd">woord</span>:  <a href="/?word=%3fFi%c3%89t%c5%a0">?FiÉtŠ</a>
+      <span class="wrd">woord</span>:  <a href="/?db=_default&amp;word=%3fFi%c3%89t%c5%a0">?FiÉtŠ</a>
     </div>
     Zoek naar woorden bij het lemma <em>fiets</em>
     <div class="example">
-      <span class="wrd">woord</span>: <a href="/?word=%2bfiets">+fiets</a>
+      <span class="wrd">woord</span>: <a href="/?db=_default&amp;word=%2bfiets">+fiets</a>
     </div>
     Zoek naar vervoegingen van het woord <em>weglopen</em>
     <div class="example">
-      <span class="wrd">woord</span>: <a href="/?word=%40loop_weg">@loop_weg</a>
+      <span class="wrd">woord</span>: <a href="/?db=_default&amp;word=%40loop_weg">@loop_weg</a>
     </div>
 
     Zoek naar het exacte woord <em>Fietsen</em> (hoofdletter- en accentgevoelig):
     <div class="example">
-      <span class="wrd">woord</span>: <a href="/?word=%3dFietsen">=Fietsen</a>
+      <span class="wrd">woord</span>: <a href="/?db=_default&amp;word=%3dFietsen">=Fietsen</a>
     </div>
     Zoek naar woorden die beginnen met <em>fiets</em>:
     <div class="example">
-      <span class="wrd">woord</span>: <a href="/?word=fiets%25">fiets%</a>
+      <span class="wrd">woord</span>: <a href="/?db=_default&amp;word=fiets%25">fiets%</a>
     </div>
     <h3>Complexere voorbeelden</h3>
     Wat er gestolen wordt:
     <div class="example">
       <span class="wrd">woord</span>, postag: n <br>
       relatie: obj1<br>
-      <span class="hfd">hoofdwoord</span>: <a href="/?rel=obj1&amp;hword=stelen&amp;postag=n&amp;hpostag=ww">stelen</a>, postag: ww
+      <span class="hfd">hoofdwoord</span>: <a href="/?db=_default&amp;rel=obj1&amp;hword=stelen&amp;postag=n&amp;hpostag=ww">stelen</a>, postag: ww
     </div>
   </body>
 </html>
