pqserve: extra bevestiging bij verwijderen groot corpus; download overzicht; contact-info op infopagina

--- a/pqserve/static/info.html
+++ b/pqserve/static/info.html
@@ -14,6 +14,7 @@ Inhoud:
 <li><a href="#intro" target="_self">Inleiding</a>
 <li><a href="#rel" target="_self">Soorten relaties</a>
 <li><a href="#voorb" target="_self">Zoekvoorbeelden</a>
+<li><a href="#contact" target="_self">Contact</a>
 </ul>
 
 <hr>
@@ -384,5 +385,10 @@ Ik <span class="hfd">wil</span> hem niet langer de hand boven het hoofd <span cl
       relatie: obj1<br>
       <span class="hfd">hoofdwoord</span>: <a href="/?db=_default&amp;rel=obj1&amp;hword=stelen&amp;postag=n&amp;hpostag=ww">stelen</a>, postag: ww
     </div>
+
+<hr>
+    <h2 id="contact">Contact</h2>
+<!--##CONTACT##-->
+
   </body>
 </html>
