--- a/src/pqserve/static/info.html
+++ b/src/pqserve/static/info.html
@@ -14,6 +14,7 @@ Inhoud:
 <li><a href="#intro" target="_self">Inleiding</a>
 <li><a href="#rel" target="_self">Soorten relaties</a>
 <li><a href="#voorb" target="_self">Zoekvoorbeelden</a>
+<li><a href="#xpath" target="_self">XPath</a>
 <li><a href="#contact" target="_self">Contact</a>
 </ul>
 
@@ -80,7 +81,7 @@ Centrale.
 <dl>
 
 <dt><span class="wrd">app</span>
-<dd>hoofd met een appositie, zoals in 
+<dd>hoofd met een appositie, zoals in
   <div class="vb">
    <span class="hfd">premier</span> <span class="wrd">Kok</span><br>
    <span class="hfd">Piet</span>, een aardige <span class="wrd">man</span>
@@ -385,6 +386,14 @@ Ik <span class="hfd">wil</span> hem niet langer de hand boven het hoofd <span cl
       relatie: obj1<br>
       <span class="hfd">hoofdwoord</span>: <a href="/?db=_default&amp;rel=obj1&amp;hword=stelen&amp;postag=n&amp;hpostag=ww">stelen</a>, postag: ww
     </div>
+
+<hr>
+  <h2 id="xpath">XPath</h2>
+
+PaQu ondersteunt XPath2 met dezelfde extensies als Dact.
+<p>
+Voorbeelden, zie:
+<a href="http://rug-compling.github.io/dact/cookbook/" target="_blanc">Dact Cookbook</a>
 
 <hr>
     <h2 id="contact">Contact</h2>
