pqserve: uitleg met afbeeldingen, xpath alleen met dbxml

--- a/src/pqserve/static/info.html
+++ b/src/pqserve/static/info.html
@@ -8,6 +8,8 @@
     <base target="_blank">
   </head>
   <body>
+<div>
+<!--##START-->
 
 Inhoud:
 <ul>
@@ -19,7 +21,7 @@ Inhoud:
 <li><a href="#relnone" target="_self">Enkelzijdige relaties</a>
 </ul>
 <li><a href="#voorb" target="_self">Zoekvoorbeelden</a>
-<li><a href="#xpath" target="_self">XPath</a>
+<li class="dbxml"><a href="#xpath" target="_self" class="dbxml">XPath</a>
 <li><a href="#contact" target="_self">Contact</a>
 </ul>
 
@@ -85,7 +87,7 @@ Centrale.
 
 <h3 id="relhead">Relaties met gewoon hoofd</h3>
 
-<img src="relhead.png">
+<img src="relhead.png" alt="su">
 
 <dl>
 
@@ -231,7 +233,7 @@ Ik <span class="hfd">wil</span> hem niet langer de hand boven het hoofd <span cl
 
 <h3 id="relother">Andere relaties</h3>
 
-<img src="relother.png">
+<img src="relother.png" alt="body/whd">
 
 <dl>
 
@@ -319,7 +321,7 @@ appels <span class="hfd">en</span> <span class="wrd">peren</span>
 
 <h3 id="relnone">Enkelzijdige relaties</h3>
 
-<img src="relnone.png">
+<img src="relnone.png" alt="cmp/-">
 
 
 <dl>
@@ -417,17 +419,19 @@ Het antwoord ligt voor de hand: <span class="wrd">luiheid</span>.
       <span class="hfd">hoofdwoord</span>: <a href="/?db=_default&amp;rel=obj1&amp;hword=stelen&amp;postag=n&amp;hpostag=ww">stelen</a>, postag: ww
     </div>
 
-<hr>
-  <h2 id="xpath">XPath</h2>
-
-PaQu ondersteunt XPath2 met dezelfde extensies als Dact.
-<p>
-Voorbeelden, zie:
-<a href="http://rug-compling.github.io/dact/cookbook/" target="_blank">Dact Cookbook</a>
+<hr class="dbxml">
+<h2 id="xpath" class="dbxml">XPath</h2>
+<div class="dbxml">
+  PaQu ondersteunt XPath2 met dezelfde extensies als Dact.
+  <p>
+  Voorbeelden, zie:
+  <a href="http://rug-compling.github.io/dact/cookbook/" target="_blank">Dact Cookbook</a>
+</div>
 
 <hr>
     <h2 id="contact">Contact</h2>
 <!--##CONTACT##-->
 
+</div>
   </body>
 </html>
