pqserve: uitleg: tekst bij body/whd

--- a/src/pqserve/static/info.html
+++ b/src/pqserve/static/info.html
@@ -311,7 +311,8 @@ cnj/cnj met <span class="hfd">appel</span> voorkomen.
 
 <dt><span class="wrd">body</span>/<span class="hfd">whd</span>
 
-<dd>voor vraagzinnen: de rompzin en het vraagwoord, zoals in
+<dd>voor vraagzinnen: de rompzin en het hoofd van de woordgroep
+die bevraagd wordt, zoals in
   <div class="vb">
    <span class="hfd">wie</span> heb je daar <span class="wrd">ontmoet</span>
 </div>
