--- a/src/pqserve/static/info.html
+++ b/src/pqserve/static/info.html
@@ -89,14 +89,14 @@ De Lassy treebanks zijn te verkrijgen via de
 In de toepassing kun je zoeken naar woord-paren en hun syntactische
 relatie (zoals onderwerp, lijdend voorwerp, bepaling). In welke zinnen
 komt
-<a href="/?db=_default&amp;word=bier&amp;rel=obj1&amp;hword=drinken">het
+<a href="./?db=_default&amp;word=bier&amp;rel=obj1&amp;hword=drinken">het
 	  woord <em>bier</em> voor als lijdend voorwerp van het
 	  werkwoord <em>drinken</em></a>?
 In welke zinnen komen
-<a href="/?db=_default&amp;word=Nederland&amp;rel=cnj%2Fcnj&amp;hword=België">de woorden <em>Nederland</em> en <em>België</em> voor
+<a href="./?db=_default&amp;word=Nederland&amp;rel=cnj%2Fcnj&amp;hword=België">de woorden <em>Nederland</em> en <em>België</em> voor
 als conjuncten in een coordinatie</a>?
 In welke zinnen komt
-<a href="/?db=_default&amp;word=geen&amp;rel=det&amp;hword=geld&amp;postag=&amp;hpostag=">het woord <em>geen</em>
+<a href="./?db=_default&amp;word=geen&amp;rel=det&amp;hword=geld&amp;postag=&amp;hpostag=">het woord <em>geen</em>
 voor als determiner bij het woord <em>geld</em></a>?
 <p>
 Voor elke zoekvraag kun je dus twee woorden specificeren, en eventueel
@@ -105,13 +105,13 @@ woordsoort (werkwoord, bijvoeglijk naamwoord, zelfstandig naamwoord)
 nader beperken. Omdat je elk van de vijf velden ook oningevuld kunt
 laten, kun je ook vragen als de volgende formuleren: In welke zinnen
 komt
-<a href="/?db=_default&amp;rel=obj1&amp;hword=stelen">een lijdend
+<a href="./?db=_default&amp;rel=obj1&amp;hword=stelen">een lijdend
 	    voorwerp bij het werkwoord <em>stelen</em></a> voor?
 In welke
 zinnen komt
-<a href="/?db=_default&amp;word=&amp;rel=su&amp;hword=beslissen&amp;postag=&amp;hpostag=">een onderwerp bij het werkwoord <em>beslissen</em></a> voor?
+<a href="./?db=_default&amp;word=&amp;rel=su&amp;hword=beslissen&amp;postag=&amp;hpostag=">een onderwerp bij het werkwoord <em>beslissen</em></a> voor?
 In welke zinnen komt
-<a href="/?db=_default&amp;postag=bw&amp;rel=mod&amp;hpostag=ww">een bijwoord voor als bepaling bij een werkwoord</a>?
+<a href="./?db=_default&amp;postag=bw&amp;rel=mod&amp;hpostag=ww">een bijwoord voor als bepaling bij een werkwoord</a>?
 <p>
 Op de bladzijde met de gevonden zinnen kun je per zin de preciese
 syntactische structuur bekijken door op de <em>boom</em>-link &#10020; te klikken.
@@ -129,12 +129,12 @@ geldt
 in het plaatje bijvoorbeeld tussen <span class="hfd">fietsen</span> en
       <span class="wrd">kinderen</span>.
 <p>
-<a href="/?db=_default&amp;rel=obj1&amp;hword=stelen&amp;postag=n" target="_blank">Voorbeeld 1:</a> Je kunt deze relatie gebruiken om te zoeken naar alle
+<a href="./?db=_default&amp;rel=obj1&amp;hword=stelen&amp;postag=n" target="_blank">Voorbeeld 1:</a> Je kunt deze relatie gebruiken om te zoeken naar alle
 			      zelfstandig naamwoorden (n) die als
 			      lijdend voorwerp (obj1) bij
 <span class="hfd">stelen</span> voorkomen.
 <p>
-<a href="/?db=_default&amp;word=graag&amp;rel=mod&amp;hpostag=ww"
+<a href="./?db=_default&amp;word=graag&amp;rel=mod&amp;hpostag=ww"
  target="_blank">Voorbeeld 2:</a>
  Zoek naar alle werkwoorden (ww) waarbij <span class="wrd">graag</span> als
 modifier (mod) optreedt.
@@ -299,7 +299,7 @@ het woord <span class="wrd">fietsen</span> en
 hoofd is van de rompzin (<b>body</b>) die
 hoort bij de vraagwoordgroep (<b>whd</b>) waarvan <span class="hfd">kinderen</span> het hoofd is.
 <p>
-<a href="/?db=_default&amp;rel=cnj%2Fcnj&amp;hword=appel&amp;postag=n" target="_blank">Voorbeeld:</a>
+<a href="./?db=_default&amp;rel=cnj%2Fcnj&amp;hword=appel&amp;postag=n" target="_blank">Voorbeeld:</a>
 Deze relaties kun
 je gebruiken om te zoeken naar alle zelfstandig naamwoorden
 (n) die in de relatie
@@ -407,7 +407,7 @@ Om zulke woorden in de
 interface te kunnen vinden, worden de (pseudo)-relaties cmp/-, dlink/-, hd/-, etc
 gebruikt.
 <p>
-<a href="/?db=_default&amp;rel=hd%2F-&amp;postag=ww" target="_blank">Voorbeeld:</a>
+<a href="./?db=_default&amp;rel=hd%2F-&amp;postag=ww" target="_blank">Voorbeeld:</a>
 Op deze manier kun je zoeken naar werkwoorden die als
 hoofd van de hele uiting optreden, door naar de relatie 'hd/-' en postag 'ww'
 te zoeken.
@@ -478,29 +478,29 @@ Het antwoord ligt voor de hand: <span class="wrd">luiheid</span>.
     Zoek naar het woord <em>fiets</em>, inclusief vervoegingen en
     varianten in collocatie (hoofdletters/kleine letters, met/zonder accenten):
     <div class="example">
-     <span class="wrd">woord</span>: <a href="/?db=_default&amp;word=fiets">fiets</a>
+     <span class="wrd">woord</span>: <a href="./?db=_default&amp;word=fiets">fiets</a>
     </div>
     Zoek naar het woord <em>FiÉtŠ</em>, inclusief varianten in
     collocatie (hoofdletters/kleine letters, met/zonder accenten):
     <div class="example">
-      <span class="wrd">woord</span>:  <a href="/?db=_default&amp;word=%3fFi%c3%89t%c5%a0">?FiÉtŠ</a>
+      <span class="wrd">woord</span>:  <a href="./?db=_default&amp;word=%3fFi%c3%89t%c5%a0">?FiÉtŠ</a>
     </div>
     Zoek naar woorden bij het lemma <em>fiets</em>
     <div class="example">
-      <span class="wrd">woord</span>: <a href="/?db=_default&amp;word=%2bfiets">+fiets</a>
+      <span class="wrd">woord</span>: <a href="./?db=_default&amp;word=%2bfiets">+fiets</a>
     </div>
     Zoek naar vervoegingen van het woord <em>weglopen</em>
     <div class="example">
-      <span class="wrd">woord</span>: <a href="/?db=_default&amp;word=%40loop_weg">@loop_weg</a>
+      <span class="wrd">woord</span>: <a href="./?db=_default&amp;word=%40loop_weg">@loop_weg</a>
     </div>
 
     Zoek naar het exacte woord <em>Fietsen</em> (hoofdletter- en accentgevoelig):
     <div class="example">
-      <span class="wrd">woord</span>: <a href="/?db=_default&amp;word=%3dFietsen">=Fietsen</a>
+      <span class="wrd">woord</span>: <a href="./?db=_default&amp;word=%3dFietsen">=Fietsen</a>
     </div>
     Zoek naar woorden die beginnen met <em>fiets</em>:
     <div class="example">
-      <span class="wrd">woord</span>: <a href="/?db=_default&amp;word=fiets%25">fiets%</a>
+      <span class="wrd">woord</span>: <a href="./?db=_default&amp;word=fiets%25">fiets%</a>
     </div>
 
 <hr class="dbxml">
