--- a/src/pqserve/static/info.html
+++ b/src/pqserve/static/info.html
@@ -35,7 +35,7 @@ Inhoud:
 <hr>
     <h2 id="intro">Inleiding</h2>
 
-Met PaQu kun je zoeken in syntactisch geannoteerde Nederlandstalige
+Met <abbr title="Parse &amp; Query">PaQu</abbr> kun je zoeken in syntactisch geannoteerde Nederlandstalige
 corpora. PaQu ondersteunt twee manieren van zoeken. Met de eerste,
 eenvoudige, manier kun je naar woordparen zoeken, met daarbij
 eventueel hun syntactische relatie. De tweede, ingewikkeldere, manier
