pqserve: info: link naar github

--- a/src/pqserve/static/info.html
+++ b/src/pqserve/static/info.html
@@ -83,6 +83,10 @@ De Lassy treebanks zijn te verkrijgen via de
 <li><a href="http://tst-centrale.org/producten/corpora/lassy-groot-corpus/6-67">Lassy Groot</a><br>
 </ul>
 
+<p>
+De broncode van PaQu is beschikbaar op <a href="https://github.com/rug-compling/paqu">github</a>.
+
+
 <hr>
     <h2 id="zoeken">Zoeken naar woordparen</h2>
 
