--- a/src/pqserve/static/info.html
+++ b/src/pqserve/static/info.html
@@ -28,6 +28,7 @@ Inhoud:
   <li><a href="#woorden" target="_self">Woorden en lemma's</a>
   </ul>
 <li class="dbxml"><a href="#xpath" target="_self" class="dbxml">Zoeken met XPath</a>
+<li><a href="#metadata" target="_self">Metadata</a>
 <li><a href="#corpora" target="_self">Corpora</a>
 <li><a href="#contact" target="_self">Contact</a>
 </ul>
@@ -519,6 +520,11 @@ macro's te kunnen uploaden en/of te bewerken.
   Voorbeelden, zie:
   <a href="http://rug-compling.github.io/dact/cookbook/" target="_blank">Dact Cookbook</a>
 </div>
+
+<hr>
+    <h2 id="metadata">Metadata</h2>
+
+TODO
 
 <hr>
     <h2 id="corpora">Corpora</h2>
