--- a/src/pqserve/static/info.html
+++ b/src/pqserve/static/info.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="robots" content="noindex,nofollow">
-    <title>PaQu -- Help</title>
+    <title>PaQu -- Info</title>
     <META http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" type="text/css" href="paqu.css">
     <base target="_blank">
@@ -16,6 +16,7 @@ Inhoud:
 <li><a href="#intro" target="_self">Inleiding</a>
   <ul>
   <li><a href="#inlnk" target="_self">Nadere informatie</a>
+  <li><a href="#credits" target="_self">Over PaQu</a>
   </ul>
 <li><a href="#zoeken" target="_self">Zoeken naar woordparen</a>
   <ul>
@@ -84,9 +85,24 @@ De Lassy treebanks zijn te verkrijgen via de
 <li><a href="http://tst-centrale.org/producten/corpora/lassy-groot-corpus/6-67">Lassy Groot</a><br>
 </ul>
 
+<h3 id="credits">Over PaQu</h3>
+PaQu is ontwikkeld door Peter Kleiweg en Gertjan van Noord,
+met financiële steun van <a href="http://www.clarin.nl/">clarin-nl</a>
+en <a href="http://www.clariah.nl/">clariah</a>. De woordparen-zoekinterface is
+gebaseerd op een eerdere versie die door Erik Tjong Kim Sang is gemaakt. De XPath-zoekinterface is
+gebaseerd op de <a href="http://rug-compling.github.io/dact/">Dact</a> software
+die door Daniël de Kok en collega's is gemaakt. De automatische syntactische
+annotatie gebruikt de Alpino parser. De Lassy corpora zijn ontwikkeld in het Stevin Lassy project.
+<p>
+<table class="credits">
+<tr>
+<td>
+<a href="http://www.clarin.nl/" target="_blank"><img src="clarinnl.png" class="noborder" alt="Clarin NL"></a>
+<td>
+<a href="http://www.clariah.nl/" target="_blank"><img src="clariah.png" class="noborder" alt="Clariah"></a>
+</table>
 <p>
 De broncode van PaQu is beschikbaar op <a href="https://github.com/rug-compling/paqu">github</a>.
-
 
 <hr>
     <h2 id="zoeken">Zoeken naar woordparen</h2>
