pqserve: opmaak voor smalle beeldschermen

--- a/src/pqserve/static/info.html
+++ b/src/pqserve/static/info.html
@@ -143,7 +143,7 @@ alle gevonden zinnen en woord-paren te zien te krijgen.
 
 <h4 id="relhead">Relaties met gewoon hoofd</h4>
 
-<img src="relhead.png" alt="su" class="left">
+<img src="relhead.png" alt="su" class="left maxwidth">
 
 Een relatie zoals "su" bestaat tussen een hoofd en zijn onderwerp. De relatie
 geldt
@@ -307,7 +307,7 @@ Ik <span class="hfd">wil</span> hem niet langer de hand boven het hoofd <span cl
 
 <h4 id="relother">Andere relaties</h4>
 
-<img src="relother.png" alt="body/whd" class="left">
+<img src="relother.png" alt="body/whd" class="left maxwidth">
 
 In de syntactische annotatie zijn er ook andere relaties dan relaties tussen
 hoofden en complementen en bepalingen. Voorbeelden van deze relaties zijn onder
@@ -416,7 +416,7 @@ appels <span class="hfd">en</span> <span class="wrd">peren</span>
 
 <h4 id="relnone">Enkelzijdige relaties</h4>
 
-<img src="relnone.png" alt="cmp/-" class="left">
+<img src="relnone.png" alt="cmp/-" class="left maxwidth">
 
 Sommige woorden zijn zelf niet het complement of de bepaling bij een ander
 woord.
